# Adaptive-FAM_mfa_utility

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  block.hpp
src/adaptive/: CMakeLists.txt  adaptive.cpp
src/convert/: CMakeLists.txt  CMakeLists_org.txt
src/eval/: CMakeLists.txt  eval.cpp
src/fixed/: CMakeLists.txt  fixed.cpp  multiblock_blend_continuous.cpp  multiblock_blend_discrete.cpp  multiblock_noblend_continuous.cpp  sunjianxin@swan.unl.edu
src/trimmer/: .eval.cpp.swp  CMakeLists.txt  trimmer.cpp
